# mlModel

./: .env  .gitignore  index.html  pyproject.toml  requirements.txt
app/: database.py  main.py  ml_service.py  models.py  schemas.py
app/api/: routes.py
data/: music_data.csv
