[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "sentiment-music-recommender"
version = "0.1.0"
description = "Sistema de Recomendação de Música por Sentimento usando FastAPI e scikit-learn"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "João Vitor Nicolau"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.104.1,<1.0.0",
    "uvicorn[standard]>=0.24.0,<1.0.0",
    "sqlalchemy>=2.0.23,<3.0.0",
    "psycopg2-binary>=2.9.9,<3.0.0",
    "scikit-learn>=1.3.2,<2.0.0",
    "pandas>=2.1.3,<3.0.0",
    "pydantic>=2.5.0,<3.0.0",
    "python-multipart>=0.0.6,<1.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "alembic>=1.13.1,<2.0.0",
    "gunicorn>=21.2.0,<22.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "isort>=5.0.0",
]

[project.urls]
#Homepage = 
Repository = "https://github.com/Joao-Vitor-Nicolau-dos-Santos/mlModel"

[project.scripts]
start = "app.main:main" 